# docs/swagger.json
@@ -6204,11 +6204,7 @@
                 "answer": {
                     "type": "string"
                 },
-                "points": {
-                    "type": "integer",
-                    "minimum": 0
-                },
-                "status_homework_id": {
+                "status_answer_id": {
                     "type": "integer"
                 },
                 "student_id": {
@@ -6531,10 +6527,7 @@
                 "answer": {
                     "type": "string"
                 },
-                "points": {
-                    "type": "integer"
-                },
-                "status_homework_id": {
+                "status_answer_id": {
                     "type": "integer"
                 },
                 "student_answer_id": {
@@ -6880,11 +6873,7 @@
                 "answer": {
                     "type": "string"
                 },
-                "points": {
-                    "type": "integer",
-                    "minimum": 0
-                },
-                "status_homework_id": {
+                "status_answer_id": {
                     "type": "integer"
                 },
                 "student_id": {
